--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="p_green">#51B53A</color>
     <color name="transparent">#00000000</color>
+    <color name="gold">#E1B721</color>
 </resources>
