--- a/app/src/main/res/layout/activity_guess_number.xml
+++ b/app/src/main/res/layout/activity_guess_number.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_wood"
-    tools:context=".ui.guess_number.GuessNumber">
+    tools:context=".ui.game.guess_number.GuessNumber">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/gn_1"
