--- a/app/src/main/res/layout/activity_learn_numbers.xml
+++ b/app/src/main/res/layout/activity_learn_numbers.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_wood"
-    tools:context=".ui.LearnNumbers">
+    tools:context=".ui.game.LearnNumbers">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/ln_1"
