--- a/app/src/main/res/layout/activity_ariphmetic.xml
+++ b/app/src/main/res/layout/activity_ariphmetic.xml
@@ -80,10 +80,14 @@
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/a_big_arip"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/a_multiply"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/a_first_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/p_green"
@@ -100,13 +104,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="12dp"
-        android:layout_marginStart="32dp"
         android:backgroundTint="@color/transparent"
         android:padding="0dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/cardView_1"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toTopOf="@+id/cardView" />
 
@@ -114,14 +119,16 @@
         android:id="@+id/cardView_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/a_equals"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/a_big_arip"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/a_second_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/p_green"
@@ -144,21 +151,27 @@
         android:src="@drawable/ic_equals"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/a_equals_0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/cardView_1"
         app:layout_constraintTop_toTopOf="@+id/cardView" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/a_var1"
+        android:id="@+id/a_var_1_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         app:cardCornerRadius="12dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/a_equals_0"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/a_var_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/blue"
@@ -171,17 +184,17 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/a_var2"
+        android:id="@+id/a_var_2_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         app:cardCornerRadius="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/a_var3"
+        app:layout_constraintBottom_toTopOf="@+id/a_var_3_container"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/a_var1">
+        app:layout_constraintEnd_toEndOf="@+id/a_var_1_container"
+        app:layout_constraintTop_toBottomOf="@+id/a_var_1_container">
 
         <TextView
+            android:id="@+id/a_var_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/blue"
@@ -194,17 +207,17 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/a_var3"
+        android:id="@+id/a_var_3_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="@+id/a_var_1_container">
 
         <TextView
+            android:id="@+id/a_var_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/blue"
@@ -223,21 +236,24 @@
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/a_var_1_container"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/a_equals"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/a_final_num"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/red"
-            android:padding="8dp"
             android:gravity="center"
+            android:padding="8dp"
             android:textColor="@color/white"
             android:textSize="@dimen/ariph_text_size"
             android:textStyle="bold"
             tools:text="\?" />
 
     </androidx.cardview.widget.CardView>
-    
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
