--- a/app/src/main/res/layout/activity_guess_number.xml
+++ b/app/src/main/res/layout/activity_guess_number.xml
@@ -287,13 +287,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/gn_live"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/transparent"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_favorite_24"
         app:layout_constraintEnd_toStartOf="@id/gn_stop"
